--- a/www/style.css
+++ b/www/style.css
@@ -16,8 +16,37 @@ h2 {
     color: #ecf0f1;
 }
 
+.selectize-input.items.full.has-options.has-items{
+    border-color:#dce4ec;
+    border-style:solid;
+    border-width:2px;
+    height:43px;
+} 
 
-.container-fluid{
+/*.form-control.shiny-bound-input{
+    background-color: #798d8f;
+    color:#ecf0f1;
+    box-shadow: none;
+    border: none;
+} */
+
+
+ .selectize-dropdown{
+    border-color:#dce4ec;
+    border-style:solid;
+    box-shadow: none;
+}
+
+#tree-search-input{
+    box-shadow: none;
+    border-color:#dce4ec;
+    border-style:solid;
+    border-radius: 3px;
+    height:43px;
+
+}
+
+body{
     background-color: #798d8f;
 }
 
